changed css for main and gallery content to fix issue with gap between header and main content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ ul menu {
 main {
     /* Fill surplus space with Main Content to push footer down */
     flex: 1 0 auto;
-    margin-top: 65px;
+    margin-top: 15px;
     background-color: black;
 }
 
@@ -272,7 +272,7 @@ img {
     /* Main Content */
     main {
         /* Push main content down below header for larger screens */
-        margin-top: 75px;
+        margin-top: 150px;
     }
 
     /* Hero */
@@ -300,5 +300,9 @@ img {
     #signup {
         margin-left: 300px;
     }
-
+/* Main Content */
+main {
+    /* Push main content down below header for larger screens */
+    margin-top: 75px;
+}
 }
